--- a/index.html
+++ b/index.html
@@ -133,11 +133,18 @@ Website Shiva Inorganics
 </a>
 <a href="https://drive.google.com/file/d/18FyodOjJlvuQcMy1k77jP7B5bhh7CDAS/view?usp=drivesdk" target="_blank" class="link-btn">
 <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/WEB%20sI.png" />
-Brochre Shiva Inorgnics
+Brochure Shiva Inorgnics
 </a>
 <a href="https://www.tirumalainorganics.com/enquiry.html" target="_blank" class="link-btn">
 <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/CONTACT.png" />
 Contact Us
+</a>
+
+
+        
+</a>
+<a href="https://www.globalchemexpo.com" target="_blank" class="link-btn">
+<img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" />
 </a>
 <div class="social-inner">
 </div>
