--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
             margin-top: 25px;
             justify-content: center;
         }
+         .link-imgs {
+        width: 610px;
+        height: 193px;
+    }
     </style>
 <div class="container-fluid d-flex justify-content-center p-0">
 <div class="container d-flex justify-content-center" style="background-color: #FBFBFB">
@@ -143,9 +147,9 @@ Contact Us
 
         
 </a>
-<a href="https://www.globalchemexpo.com" target="_blank" class="link-btn">
-<img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" />
-</a>
+<a href="https://www.globalchemexpo.com" target="_blank">
+    <img class="link-imgs" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" alt="Global ChemShow"
+    </a>
 <div class="social-inner">
 </div>
 </div>
