--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
             justify-content: center;
         }
          .link-imgs {
-        width: 360px;
-        height: 114px;
+        width: 100%;
+        max-width: 610px;
+        height: auto;
     }
     </style>
 <div class="container-fluid d-flex justify-content-center p-0">
@@ -148,7 +149,7 @@ Contact Us
         
 </a>
 <a href="https://www.globalchemexpo.com" target="_blank">
-    <img class="link-imgs" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" alt="Global ChemShow"
+    <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" alt="Global ChemShow"
     </a>
 <div class="social-inner">
 </div>
