--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Contact Us
         
 </a>
 <a href="https://www.globalchemexpo.com" target="_blank">
-    <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" alt="Global ChemShow"
+    <img class="link-imgs" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/expo.jpg" alt="Global ChemShow"
     </a>
 <div class="social-inner">
 </div>
