--- a/index.html
+++ b/index.html
@@ -140,11 +140,15 @@ Website Shiva Inorganics
 <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/WEB%20sI.png" />
 Brochure Shiva Inorgnics
 </a>
-<a href="https://www.tirumalainorganics.com/enquiry.html" target="_blank" class="link-btn">
+<a href="https://shivagroup.github.io/explore-now/contact-us" target="_blank" class="link-btn">
 <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/CONTACT.png" />
 Contact Us
 </a>
-
+</a>
+<a href="https://www.tirumalainorganics.com/enquiry.html" target="_blank" class="link-btn">
+<img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/CONTACT.png" />
+Direct Enquiry
+</a>
 
         
 </a>
