--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Website Shiva Inorganics
 <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/WEB%20sI.png" />
 Brochure Shiva Inorgnics
 </a>
-<a href="https://shivagroup.github.io/explore-now/contact-us" target="_blank" class="link-btn">
+<a href="contact-us.html" target="_blank" class="link-btn">
 <img class="link-img" src="https://raw.githubusercontent.com/shivagroup/explore-now/main/CONTACT.png" />
 Contact Us
 </a>
