--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A</title>
+    <title>Contact Us</title>
     <style>
         body {
             background-color: white;
@@ -60,6 +60,7 @@
             <p>Name: SK Handa</p>
             <p>Design.: Group Chairman & CEO</p>
             <p>Contact Info: +91-9877240311</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/skhanda.vcf" download>Save Contact</a>
         </div>
         <!-- QR Code 2 -->
         <div class="qr-box">
@@ -67,6 +68,7 @@
             <p>Name: Sandeep Puri</p>
             <p>Design.: Managing Director</p>
             <p>Contact Info: +91-9357110002</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/spuri.vcf" download>Save Contact</a>
         </div>
         <!-- QR Code 3 -->
         <div class="qr-box">
@@ -74,6 +76,7 @@
             <p>Name: Kunal Puri</p>
             <p>Design.: Director</p>
             <p>Contact Info: +91-8146202004</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/kpuri.vcf" download>Save Contact</a>
         </div>
         <!-- QR Code 4 -->
         <div class="qr-box">
@@ -81,6 +84,7 @@
             <p>Name: Siddhant Handa</p>
             <p>Design.: Director</p>
             <p>Contact Info: +91-9915966607</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/sid.vcf" download>Save Contact</a>
         </div>
         <!-- QR Code 5 -->
         <div class="qr-box">
@@ -88,6 +92,7 @@
             <p>Name: Himanshu Garg</p>
             <p>Design.: Manager Sales & Marketing</p>
             <p>Contact Info: +91-9877351549</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/him.vcf" download>Save Contact</a>
         </div>
         <!-- QR Code 6 -->
         <div class="qr-box">
@@ -95,6 +100,7 @@
             <p>Name: Rahul Chadha</p>
             <p>Design.: Sales Executive</p>
             <p>Contact Info: +91-6283847513</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/rc.vcf" download>Save Contact</a>
         </div>
         <!-- QR Code 7 -->
         <div class="qr-box">
@@ -102,6 +108,7 @@
             <p>Name: Gagandeep Singh</p>
             <p>Design.: Sales Executive</p>
             <p>Contact Info: +91-6239465398</p>
+            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/gagan.vcf" download>Save Contact</a>
         </div>
     </div>
 </body>
