--- a/contact-us.html
+++ b/contact-us.html
@@ -60,7 +60,7 @@
             <p>Name: SK Handa</p>
             <p>Design.: Group Chairman & CEO</p>
             <p>Contact Info: +91-9877240311</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/skv.vcf" download>Save Contact</a>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjpoYW5kYTtza3s7OwpGTjpTSyBIYW5kYQpPUkc6R3JvdXAgQ2hhaXJtYW4gJiBDRU8KVEVMO1RZUEU9Q0VMTDorOTE5ODc3MjQwMzExCkVNQUlMO3R5cGU9aW50ZXJuZXQ6c2toYW5kYUBleGFtcGxlLmNvbQpFTkQ6VkNBUkQK" download="SK Handa.vcf">Save Contact</a>
         </div>
         <!-- QR Code 2 -->
         <div class="qr-box">
@@ -68,7 +68,7 @@
             <p>Name: Sandeep Puri</p>
             <p>Design.: Managing Director</p>
             <p>Contact Info: +91-9357110002</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/spuri.vcf" download>Save Contact</a>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjpwcmk7c2FuZGVlcDs7OwpGTjpTYW5kZWVwIFB1cmkKT1JHO01hbmFnaW5nIERpcmVjdG9yClRFTDtUWVBFPUNFTExCOjkxLTkzNTcxMTAwMDIKRU1BSUw7dHlwZT1pbnRlcm5ldDpzYW5kZWVwQGV4YW1wbGUuY29tCkVORDpWQ0FSRAo=" download="Sandeep Puri.vcf">Save Contact</a>
         </div>
         <!-- QR Code 3 -->
         <div class="qr-box">
@@ -76,7 +76,7 @@
             <p>Name: Kunal Puri</p>
             <p>Design.: Director</p>
             <p>Contact Info: +91-8146202004</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/kpuri.vcf" download>Save Contact</a>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjpwdXJpO2t1bmFsOzs7CkZOOkt1bmFsIFB1cmkKT1JHO0RpcmVjdG9yClRFTDtUWVBFPUNFTExCOjkxLTgxNDYyMDIwMDQKRU1BSUw7dHlwZT1pbnRlcm5ldDprdW5hbEBleGFtcGxlLmNvbQpFTkQ6VkNBUkQK" download="Kunal Puri.vcf">Save Contact</a>
         </div>
         <!-- QR Code 4 -->
         <div class="qr-box">
@@ -84,7 +84,7 @@
             <p>Name: Siddhant Handa</p>
             <p>Design.: Director</p>
             <p>Contact Info: +91-9915966607</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/sid.vcf" download>Save Contact</a>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjpoYW5kYTtzaWRkaGFudDs7OwpGTjpTaWRkaGFudCBIYW5kYQpPUkc6RGlyZWN0b3IKVEVMO1RZUEU9Q0VMTCs5MS05OTE1OTY2NjA3CkVNQUlMO3R5cGU9aW50ZXJuZXQ6c2lkZGhhbmRhQGV4YW1wbGUuY29tCkVORDpWQ0FSRAo=" download="Siddhant Handa.vcf">Save Contact</a>
         </div>
         <!-- QR Code 5 -->
         <div class="qr-box">
@@ -92,7 +92,7 @@
             <p>Name: Himanshu Garg</p>
             <p>Design.: Manager Sales & Marketing</p>
             <p>Contact Info: +91-9877351549</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/him.vcf" download>Save Contact</a>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjpnYXJnO2hpbWFuc2h1Ozs7CkZOOkhpbWFuc2h1IEdhcmcKT1JHO01hbmFnZXIgU2FsZXMgJiBNYXJrZXRpbmcKVEVMO1RZUEU9Q0VMTCs5MS05ODc3MzUxNTQ5CkVNQUlMO3R5cGU9aW50ZXJuZXQ6aGltYW5zaHVAZXhhbXBsZS5jb20KRU5EOlZDQVJECg==" download="Himanshu Garg.vcf">Save Contact</a>
         </div>
         <!-- QR Code 6 -->
         <div class="qr-box">
@@ -100,7 +100,7 @@
             <p>Name: Rahul Chadha</p>
             <p>Design.: Sales Executive</p>
             <p>Contact Info: +91-6283847513</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/rc.vcf" download>Save Contact</a>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjpjYWRoYTtyYWh1bDs7OwpGTjpSYWh1bCBDaGFkaGEKT1JHO1NhbGVzIEV4ZWN1dGl2ZQpURUw7VFlQRT1DRUxMKzkxLTYyODM4NDc1MTMKRU1BSUw7dHlwZT1pbnRlcm5ldDpyYWh1bEBleGFtcGxlLmNvbQpFTkQ6VkNBUkQK" download="Rahul Chadha.vcf">Save Contact</a>
         </div>
         <!-- QR Code 7 -->
         <div class="qr-box">
@@ -108,8 +108,4 @@
             <p>Name: Gagandeep Singh</p>
             <p>Design.: Sales Executive</p>
             <p>Contact Info: +91-6239465398</p>
-            <a href="https://raw.githubusercontent.com/shivagroup/explore-now/main/gagan.vcf" download>Save Contact</a>
-        </div>
-    </div>
-</body>
-</html>
+            <a href="data:text/vcard;base64,QkVHSU46VkNBUkQKVkVSU0lPTjozLjAKTjppbmRpdmlkdWFsO2dhZ2[_{{{CITATION{{{_1{](https://github.com/alphaprime27/Forum-Website/tree/069b1d62456b32902a2c87ea788ab2dd022df4f4/headers4.php)
